[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Enemies/Enemy2.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/enemyships/Spaceship_05_BLUE.png" type="Texture" id=2]
[ext_resource path="res://src/Enemies/Boss1.gd" type="Script" id=3]
[ext_resource path="res://src/effects/Laser.tscn" type="PackedScene" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Boss1" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="LeftLaser" parent="." index="0" instance=ExtResource( 4 )]
position = Vector2( -161, 72 )
rotation = 1.5708

[node name="RightLaser" parent="." index="1" instance=ExtResource( 4 )]
position = Vector2( 163, 71 )
rotation = 1.5708

[node name="Sprite" parent="." index="2"]
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="Area2D" index="0"]
polygon = PoolVector2Array( -180.124, 128.427, -146.412, 128.427, -143.415, -14.6611, -58.0119, -18.4069, -60.2593, 74.4881, -5.57111, 112.695, 58.1069, 69.2441, 58.1069, -22.9018, 146.507, -21.4035, 142.761, 129.176, 178.721, 129.176, 177.972, -64.8544, -3.32364, -140.519, -176.378, -62.6069 )

[node name="Particles2D" parent="." index="4"]
visible = false
material = SubResource( 1 )
position = Vector2( 77.2936, -126.588 )
lifetime = 2.0

[node name="LeftShooter" parent="." index="5"]
position = Vector2( -57, 58 )

[node name="RightShooter" parent="." index="6"]
position = Vector2( 57, 58 )

[node name="LeftShooter2" type="Position2D" parent="." index="8"]
position = Vector2( -126, -10 )

[node name="LeftShooter3" type="Position2D" parent="." index="9"]
position = Vector2( -161, 72 )

[node name="RightShooter2" type="Position2D" parent="." index="10"]
position = Vector2( 126, -10 )

[node name="RightShooter3" type="Position2D" parent="." index="11"]
position = Vector2( 161, 72 )

[node name="ProgressBar" type="ProgressBar" parent="." index="12"]
margin_left = -47.5683
margin_top = -107.623
margin_right = 38.4317
margin_bottom = -93.6232
max_value = 50000.0
value = 50000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="." index="13"]
wait_time = 8.0
autostart = true

[node name="Timer3" type="Timer" parent="." index="14"]
wait_time = 12.0
autostart = true

[node name="Ability2Timer" type="Timer" parent="." index="15"]
wait_time = 0.2

[node name="Ability3Timer" type="Timer" parent="." index="16"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Ability2Timer" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Ability3Timer" to="." method="_on_Ability3Timer_timeout"]
